deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: upload
  name: upload
spec:
  ports:
  - name: http
    port: 5000
    protocol: TCP
    targetPort: http
  selector:
    app: upload
  sessionAffinity: None
  type: ClusterIP
