deployment/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: upload
  name: upload
spec:
  tls:
  - hosts:
      - 2886795296-80-kitek05.environments.katacoda.com
    secretName: upload-tls
  rules:
  - host: 2886795296-80-kitek05.environments.katacoda.com
    http:
      paths:
      - backend:
          serviceName: upload
          servicePort: 5000
        path: /
